--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -21,6 +21,7 @@ Vagrant.configure("2") do |config|
     v.name = your_virtual_name
     v.memory = 2048
     v.cpus = 2
+    v.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate/v-root", "1"]
   end
 
   # public network => Bridged
